# acer-nitro17-keyboard-and-fan-driver

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  acer-nitro17-71.c  acer-nitro17.c  config.sh  config.yml  install.sh  uninstall.sh
DEBIAN/: conffiles  control  postinst  postrm  prerm
cmake/: FindKernelHeaders.cmake
src/: CMakeLists.txt  acer-nitro17.c  dkms.conf
src/cmake/: FindKernelHeaders.cmake
udev-rules/: 50-acer-nitro17.rules
